--- a/ch7/src/main/resources/templates/index.html
+++ b/ch7/src/main/resources/templates/index.html
@@ -27,7 +27,8 @@
                 <li class="list-group-item" th:each="person:${people}">
                     <span th:text="${person.name}"></span>
                     <span th:text="${person.age}"></span>
-                    <!--<button class="btn" th:onclick="'getName(\'' + ${person.name} + '\');'">获得名字</button>-->
+                    <!--这一行有问题-->
+                    <button class="btn" th:onclick="getName([[${person.name}]]);">获得名字</button>
                 </li>
             </ul>
         </div>
