--- a/ch9_1/src/main/resources/templates/login.html
+++ b/ch9_1/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta content="text/html;charset=UTF-8"/>
 <title>登录页面</title>
-<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" th:href="@{css/bootstrap.min.css}"/>
+<link rel="stylesheet" type="text/css" th:href="@{static/css/bootstrap.min.css}"/>
 <style type="text/css">
 	body {
   padding-top: 50px;
