添加页面注释

--- a/ch7_6/src/main/resources/templates/chat.html
+++ b/ch7_6/src/main/resources/templates/chat.html
@@ -30,7 +30,9 @@
     stomp.connect('guest', 'guest', function(frame) {
         stomp.subscribe("/user/queue/notifications", handleNotification);//2
     });
-
+// 2 订阅/user/queue/notifications发送的消息,
+//   这里与在控制器的messagingTemplate.convertAndSendToUser中定义的订阅地址保持一致
+//   多了一个/user,并且这个/user是必须的,使用了/user才会发送消息到指定的用户
 
 
     function handleNotification(message) {
